--- a/Detecting_Potential_Passive_Customers_KD.ipynb
+++ b/Detecting_Potential_Passive_Customers_KD.ipynb
@@ -4453,14 +4453,14 @@
           "height": 292
         },
         "id": "U_tXB4HPlopG",
-        "outputId": "1757a577-53c2-460b-97e5-57db2000452c"
+        "outputId": "55110f9b-37f2-4ef0-ce57-a1655217f97e"
       },
       "source": [
-        "# get how long person has been a member in years\n",
+        "# get how long person has been a member in weeks\n",
         "full_dataset['membership_time'] = (pd.to_datetime('20180801', format='%Y%m%d') - pd.to_datetime(full_dataset['became_member_on'], format='%Y%m%d'))/np.timedelta64(1, 'W')\n",
         "full_dataset.head()"
       ],
-      "execution_count": 57,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4510,6 +4510,7 @@
               "      <th>income</th>\n",
               "      <th>membership_time</th>\n",
               "      <th>avg transaction count by membership time</th>\n",
+              "      <th>customer type</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -4520,7 +4521,7 @@
               "      <td>4.0</td>\n",
               "      <td>4.0</td>\n",
               "      <td>0.500000</td>\n",
-              "      <td>0.5</td>\n",
+              "      <td>0.500000</td>\n",
               "      <td>0.666667</td>\n",
               "      <td>0.333333</td>\n",
               "      <td>83.32</td>\n",
@@ -4528,7 +4529,7 @@
               "      <td>3.0</td>\n",
               "      <td>1.0</td>\n",
               "      <td>1.0</td>\n",
-              "      <td>9.000000</td>\n",
+              "      <td>9.00</td>\n",
               "      <td>6.000000</td>\n",
               "      <td>5.0</td>\n",
               "      <td>4.0</td>\n",
@@ -4540,143 +4541,148 @@
               "      <td>20180726</td>\n",
               "      <td>88000.0</td>\n",
               "      <td>0.857143</td>\n",
-              "      <td>inf</td>\n",
+              "      <td>4.666667</td>\n",
+              "      <td>active</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>13253</th>\n",
-              "      <td>4.0</td>\n",
-              "      <td>6.0</td>\n",
-              "      <td>5.0</td>\n",
-              "      <td>12.0</td>\n",
-              "      <td>0.333333</td>\n",
-              "      <td>0.8</td>\n",
-              "      <td>0.833333</td>\n",
-              "      <td>0.666667</td>\n",
-              "      <td>217.23</td>\n",
-              "      <td>18.102500</td>\n",
-              "      <td>1.0</td>\n",
+              "      <th>14020</th>\n",
               "      <td>2.0</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>8.750000</td>\n",
-              "      <td>7.750000</td>\n",
               "      <td>4.0</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>3.0</td>\n",
-              "      <td>4.0</td>\n",
-              "      <td>M</td>\n",
-              "      <td>46</td>\n",
-              "      <td>e4989ca3d8974e28a3fe87aa0b0ce327</td>\n",
-              "      <td>20180726</td>\n",
-              "      <td>74000.0</td>\n",
-              "      <td>0.857143</td>\n",
-              "      <td>inf</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>7415</th>\n",
-              "      <td>NaN</td>\n",
-              "      <td>6.0</td>\n",
               "      <td>3.0</td>\n",
               "      <td>7.0</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>0.500000</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>25.75</td>\n",
-              "      <td>3.678571</td>\n",
-              "      <td>2.0</td>\n",
-              "      <td>3.0</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>7.000000</td>\n",
-              "      <td>6.666667</td>\n",
-              "      <td>6.0</td>\n",
-              "      <td>4.0</td>\n",
-              "      <td>6.0</td>\n",
-              "      <td>5.0</td>\n",
-              "      <td>M</td>\n",
-              "      <td>73</td>\n",
-              "      <td>7ffb3bc618ad453b9bce311ec88e481d</td>\n",
-              "      <td>20180726</td>\n",
-              "      <td>58000.0</td>\n",
-              "      <td>0.857143</td>\n",
-              "      <td>inf</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4543</th>\n",
-              "      <td>1.0</td>\n",
-              "      <td>3.0</td>\n",
-              "      <td>2.0</td>\n",
-              "      <td>5.0</td>\n",
-              "      <td>0.200000</td>\n",
-              "      <td>0.5</td>\n",
+              "      <td>0.285714</td>\n",
               "      <td>0.666667</td>\n",
-              "      <td>0.333333</td>\n",
-              "      <td>22.18</td>\n",
-              "      <td>4.436000</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>3.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>12.333333</td>\n",
-              "      <td>9.000000</td>\n",
+              "      <td>0.750000</td>\n",
+              "      <td>0.500000</td>\n",
+              "      <td>74.99</td>\n",
+              "      <td>10.712857</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>4.00</td>\n",
+              "      <td>5.333333</td>\n",
               "      <td>3.0</td>\n",
               "      <td>2.0</td>\n",
-              "      <td>2.0</td>\n",
+              "      <td>3.0</td>\n",
               "      <td>3.0</td>\n",
               "      <td>M</td>\n",
               "      <td>85</td>\n",
-              "      <td>4e233f02eff840c7a3e5ec15d55d7d23</td>\n",
+              "      <td>f1f01be4e2344bf08b7f488c115ad374</td>\n",
               "      <td>20180726</td>\n",
-              "      <td>67000.0</td>\n",
+              "      <td>45000.0</td>\n",
               "      <td>0.857143</td>\n",
-              "      <td>inf</td>\n",
+              "      <td>8.166667</td>\n",
+              "      <td>active</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>14564</th>\n",
-              "      <td>NaN</td>\n",
+              "      <th>10921</th>\n",
+              "      <td>2.0</td>\n",
+              "      <td>4.0</td>\n",
               "      <td>4.0</td>\n",
               "      <td>3.0</td>\n",
-              "      <td>4.0</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>0.750000</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>70.42</td>\n",
-              "      <td>17.605000</td>\n",
-              "      <td>2.0</td>\n",
+              "      <td>0.666667</td>\n",
+              "      <td>0.500000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.500000</td>\n",
+              "      <td>22.07</td>\n",
+              "      <td>7.356667</td>\n",
+              "      <td>3.0</td>\n",
               "      <td>0.0</td>\n",
               "      <td>1.0</td>\n",
-              "      <td>5.000000</td>\n",
-              "      <td>4.666667</td>\n",
-              "      <td>3.0</td>\n",
+              "      <td>5.00</td>\n",
+              "      <td>5.250000</td>\n",
+              "      <td>4.0</td>\n",
               "      <td>2.0</td>\n",
-              "      <td>3.0</td>\n",
-              "      <td>3.0</td>\n",
+              "      <td>4.0</td>\n",
+              "      <td>4.0</td>\n",
               "      <td>F</td>\n",
-              "      <td>48</td>\n",
-              "      <td>fb75504a0e404549995a3e8427a2a252</td>\n",
+              "      <td>78</td>\n",
+              "      <td>baefe3a7a1f74e91b9b1963ccc011ad6</td>\n",
               "      <td>20180726</td>\n",
-              "      <td>64000.0</td>\n",
+              "      <td>55000.0</td>\n",
               "      <td>0.857143</td>\n",
-              "      <td>inf</td>\n",
+              "      <td>3.500000</td>\n",
+              "      <td>active</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>10639</th>\n",
+              "      <td>1.0</td>\n",
+              "      <td>4.0</td>\n",
+              "      <td>4.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.250000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.250000</td>\n",
+              "      <td>20.86</td>\n",
+              "      <td>20.860000</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>5.00</td>\n",
+              "      <td>4.750000</td>\n",
+              "      <td>4.0</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>4.0</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>M</td>\n",
+              "      <td>63</td>\n",
+              "      <td>b65eaba56d124588aed15c484db427a8</td>\n",
+              "      <td>20180726</td>\n",
+              "      <td>78000.0</td>\n",
+              "      <td>0.857143</td>\n",
+              "      <td>1.166667</td>\n",
+              "      <td>active</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3558</th>\n",
+              "      <td>NaN</td>\n",
+              "      <td>6.0</td>\n",
+              "      <td>4.0</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>0.666667</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>7.78</td>\n",
+              "      <td>3.890000</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>4.25</td>\n",
+              "      <td>4.750000</td>\n",
+              "      <td>4.0</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>4.0</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>M</td>\n",
+              "      <td>59</td>\n",
+              "      <td>3d50b3815c8e4f3b84f46be4d1b64cd3</td>\n",
+              "      <td>20180726</td>\n",
+              "      <td>34000.0</td>\n",
+              "      <td>0.857143</td>\n",
+              "      <td>2.333333</td>\n",
+              "      <td>active</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "       offer completed  ...  avg transaction count by membership time\n",
-              "3446               2.0  ...                                       inf\n",
-              "13253              4.0  ...                                       inf\n",
-              "7415               NaN  ...                                       inf\n",
-              "4543               1.0  ...                                       inf\n",
-              "14564              NaN  ...                                       inf\n",
+              "       offer completed  ...  customer type\n",
+              "3446               2.0  ...         active\n",
+              "14020              2.0  ...         active\n",
+              "10921              2.0  ...         active\n",
+              "10639              1.0  ...         active\n",
+              "3558               NaN  ...         active\n",
               "\n",
-              "[5 rows x 26 columns]"
+              "[5 rows x 27 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 57
+          "execution_count": 63
         }
       ]
     },
