--- a/Detecting_Potential_Passive_Customers_KD.ipynb
+++ b/Detecting_Potential_Passive_Customers_KD.ipynb
@@ -4980,7 +4980,7 @@
       },
       "source": [
         "# make prediction\n",
-        "y_pred = svcclassfier.predict(X_test)\n",
+        "y_pred = scvclassfier.predict(X_test)\n",
         "\n",
         "# evaluation results\n",
         "\n",
