--- a/notebooks/Passive Customer Detection.ipynb
+++ b/notebooks/Passive Customer Detection.ipynb
@@ -1794,14 +1794,60 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# evaluate RFE for classification\n",
+    "from numpy import mean\n",
+    "from numpy import std\n",
+    "from sklearn.datasets import make_classification\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import RepeatedStratifiedKFold\n",
+    "from sklearn.feature_selection import RFE\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "# define dataset\n",
+    "# X, y = make_classification(n_samples=1000, n_features=10, n_informative=5, n_redundant=5, random_state=1)\n",
+    "X = data[['is__F', 'age', 'income_in_k', 'avg_difficulty', 'avg_duration', 'avg_transaction_amt', 'transactions_per_membership_days', 'days_as_member']]\n",
+    "y = target\n",
+    "# create pipeline\n",
+    "rfe = RFE(estimator=DecisionTreeClassifier(), n_features_to_select=5)\n",
+    "model = DecisionTreeClassifier()\n",
+    "pipeline = Pipeline(steps=[('s',rfe),('m',model)])\n",
+    "# evaluate model\n",
+    "cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=3, random_state=1)\n",
+    "n_scores = cross_val_score(pipeline, X, y, scoring='accuracy', cv=cv, n_jobs=-1, error_score='raise')\n",
+    "# report performance\n",
+    "print('Accuracy: %.3f (%.3f)' % (mean(n_scores), std(n_scores)))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# evaluate RFE for classification\n",
+    "from numpy import mean\n",
+    "from numpy import std\n",
+    "from sklearn.datasets import make_classification\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import RepeatedStratifiedKFold\n",
+    "from sklearn.feature_selection import RFE\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "# define dataset\n",
+    "# X, y = make_classification(n_samples=1000, n_features=10, n_informative=5, n_redundant=5, random_state=1)\n",
+    "X = data[['is__F', 'age', 'income_in_k', 'avg_difficulty', 'avg_duration', 'avg_transaction_amt', 'transactions_per_membership_days', 'days_as_member']]\n",
+    "y = target\n",
+    "# create pipeline\n",
+    "rfe = RFE(estimator=RandomForestClassifier(), n_features_to_select=5)\n",
+    "model = RandomForestClassifier()\n",
+    "pipeline = Pipeline(steps=[('s',rfe),('m',model)])\n",
+    "# evaluate model\n",
+    "cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=3, random_state=1)\n",
+    "n_scores = cross_val_score(pipeline, X, y, scoring='accuracy', cv=cv, n_jobs=-1, error_score='raise')\n",
+    "# report performance\n",
+    "print('Accuracy: %.3f (%.3f)' % (mean(n_scores), std(n_scores)))"
+   ]
   },
   {
    "cell_type": "markdown",
