--- a/notebooks/Passive Customer Detection.ipynb
+++ b/notebooks/Passive Customer Detection.ipynb
@@ -1790,66 +1790,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# evaluate RFE for classification\n",
-    "from numpy import mean\n",
-    "from numpy import std\n",
-    "from sklearn.datasets import make_classification\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.model_selection import RepeatedStratifiedKFold\n",
-    "from sklearn.feature_selection import RFE\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "# define dataset\n",
-    "# X, y = make_classification(n_samples=1000, n_features=10, n_informative=5, n_redundant=5, random_state=1)\n",
-    "X = data[['is__F', 'age', 'income_in_k', 'avg_difficulty', 'avg_duration', 'avg_transaction_amt', 'transactions_per_membership_days', 'days_as_member']]\n",
-    "y = target\n",
-    "# create pipeline\n",
-    "rfe = RFE(estimator=DecisionTreeClassifier(), n_features_to_select=5)\n",
-    "model = DecisionTreeClassifier()\n",
-    "pipeline = Pipeline(steps=[('s',rfe),('m',model)])\n",
-    "# evaluate model\n",
-    "cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=3, random_state=1)\n",
-    "n_scores = cross_val_score(pipeline, X, y, scoring='accuracy', cv=cv, n_jobs=-1, error_score='raise')\n",
-    "# report performance\n",
-    "print('Accuracy: %.3f (%.3f)' % (mean(n_scores), std(n_scores)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# evaluate RFE for classification\n",
-    "from numpy import mean\n",
-    "from numpy import std\n",
-    "from sklearn.datasets import make_classification\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.model_selection import RepeatedStratifiedKFold\n",
-    "from sklearn.feature_selection import RFE\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "# define dataset\n",
-    "# X, y = make_classification(n_samples=1000, n_features=10, n_informative=5, n_redundant=5, random_state=1)\n",
-    "X = data[['is__F', 'age', 'income_in_k', 'avg_difficulty', 'avg_duration', 'avg_transaction_amt', 'transactions_per_membership_days', 'days_as_member']]\n",
-    "y = target\n",
-    "# create pipeline\n",
-    "rfe = RFE(estimator=RandomForestClassifier(), n_features_to_select=5)\n",
-    "model = RandomForestClassifier()\n",
-    "pipeline = Pipeline(steps=[('s',rfe),('m',model)])\n",
-    "# evaluate model\n",
-    "cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=3, random_state=1)\n",
-    "n_scores = cross_val_score(pipeline, X, y, scoring='accuracy', cv=cv, n_jobs=-1, error_score='raise')\n",
-    "# report performance\n",
-    "print('Accuracy: %.3f (%.3f)' % (mean(n_scores), std(n_scores)))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2149,7 +2089,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Highest f1 score is obtained for Gradient Boosting Classifier"
+    "#### Highest f1 score is obtained for RandomForestClassifier"
    ]
   },
   {
@@ -2160,15 +2100,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fine tuning RandomForestClassifier and GradientBosstingClassifier with the top set of F1 scores"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n"
+      "Fitting 5 folds for each of 864 candidates, totalling 4320 fits\n"
      ]
     },
     {
@@ -2176,7 +2123,7 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done   5 out of   5 | elapsed:    7.6s finished\n"
+      "[Parallel(n_jobs=1)]: Done 4320 out of 4320 | elapsed: 583.6min finished\n"
      ]
     },
     {
@@ -2184,18 +2131,18 @@
      "output_type": "stream",
      "text": [
       "RandomForestClassifier\n",
-      "Mean Accuracy: 0.822\n",
-      "F1:  0.7914105998905214\n",
-      "RandomForestClassifier(max_depth=8, n_estimators=120, random_state=42)\n"
+      "Mean Accuracy: 1.0\n",
+      "F1:  0.8204564038296459\n",
+      "RandomForestClassifier(max_depth=25, n_estimators=1200, random_state=42)\n"
      ]
     }
    ],
    "source": [
     "#Tuning the RandomForestClassifier with hyperparameters to improve the accuracy score\n",
-    "hyperparameters = {'n_estimators': [120],#[100, 120, 300, 500, 800, 1200], #sets the number of decision trees to be used in the forest\n",
-    "                  'max_depth': [8],#[5, 8, 15, 25, 30, None], #sets the max depth of the tree\n",
-    "                  'min_samples_split': [2],#[1,2,5,10,15,100], #The minimum number of samples needed before a split\n",
-    "                  'min_samples_leaf': [1]#[1,2,5,10], #The minimum number of samples needed to create a leaf (decision) node\n",
+    "hyperparameters = {'n_estimators': 1200,#[100, 120, 300, 500, 800, 1200], #sets the number of decision trees to be used in the forest\n",
+    "                  'max_depth': 25,#[5, 8, 15, 25, 30, None], #sets the max depth of the tree\n",
+    "                  #'min_samples_split': [1,2,5,10,15,100], #The minimum number of samples needed before a split\n",
+    "                  #'min_samples_leaf': [1,2,5,10] #The minimum number of samples needed to create a leaf (decision) node\n",
     "             }\n",
     "\n",
     "rfc = RandomForestClassifier(random_state=42)\n",
@@ -2205,17 +2152,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.08284729, 0.04684257, 0.04930609, 0.45652127, 0.24316397,\n",
-       "       0.12131882])"
+       "array([0.12169388, 0.10866323, 0.11270104, 0.30073143, 0.2029879 ,\n",
+       "       0.15322251])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2227,14 +2174,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n"
+      "Fitting 5 folds for each of 6 candidates, totalling 30 fits\n"
      ]
     },
     {
@@ -2242,7 +2189,7 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done   5 out of   5 | elapsed:   18.4s finished\n"
+      "[Parallel(n_jobs=1)]: Done  30 out of  30 | elapsed: 14.0min finished\n"
      ]
     },
     {
@@ -2250,9 +2197,10 @@
      "output_type": "stream",
      "text": [
       "GradientBoostingClassifier\n",
-      "Mean Accuracy: 0.8933\n",
-      "F1:  0.8063378502408709\n",
-      "GradientBoostingClassifier(learning_rate=0.5, n_estimators=200, random_state=42)\n"
+      "Mean Accuracy: 1.0\n",
+      "F1:  0.825278507078077\n",
+      "GradientBoostingClassifier(learning_rate=0.5, max_depth=15, n_estimators=200,\n",
+      "                           random_state=42)\n"
      ]
     }
    ],
@@ -2265,7 +2213,7 @@
     "n_estimators = [1, 2, 4, 8, 16, 32, 64, 100, 200]\n",
     "\n",
     "#max_depth, default=3, maximum depth of the individual regression estimators. The maximum depth limits the number of nodes in the tree\n",
-    "max_depths = np.linspace(1, 32, 32, endpoint=True)\n",
+    "max_depths = [5, 8, 15, 25, 30, None]\n",
     "\n",
     "#min_samples_split, default=2, The minimum number of samples required to split an internal node\n",
     "min_samples_split = np.linspace(0.1, 1.0, 10, endpoint=True)\n",
@@ -2277,7 +2225,7 @@
     "max_features = list(range(1,X_train.shape[1]))\n",
     "\n",
     "gb_tuned = GradientBoostingClassifier(random_state=42)\n",
-    "hyperparameters = {'learning_rate': [0.5], 'n_estimators': [200]}#, 'max_depth': max_depths}#, 'min_samples_split': min_samples_split, 'min_samples_leaf':min_samples_leaf, 'max_features':max_features}   \n",
+    "hyperparameters = {'learning_rate': [0.5], 'n_estimators': [200], 'max_depth': 15}#, 'min_samples_split': min_samples_split, 'min_samples_leaf':min_samples_leaf, 'max_features':max_features}   \n",
     "gb_best_est = train_classifier(gb_tuned, hyperparameters, X_train, y_train)\n",
     "print(gb_best_est)"
    ]
@@ -2310,26 +2258,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### GradientBoostingClassifier"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([1, 1, 1, ..., 1, 1, 1], dtype=int64)"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'gb_best_est' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-a4089926ec50>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#Passing the test data to the GradientBoodtingClassifier estimator\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0my_pred_gb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgb_best_est\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0my_pred_gb\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'gb_best_est' is not defined"
+     ]
     }
    ],
    "source": [
     "#Passing the test data to the GradientBoodtingClassifier estimator\n",
-    "y_pred = gb_best_est.predict(X_test)\n",
-    "y_pred"
+    "y_pred_gb = gb_best_est.predict(X_test)\n",
+    "y_pred_gb"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
